src/objects/Campaign_Project_Studio_Element__c.object
<CustomObject>
    <description>Campaign Project Studio Element</description>
    <fields>
        <fullName>Campaign_Project_Studio_Scope__c</fullName>
        <label>Campaign Project Studio Scope</label>
        <referenceTo>Campaign_Project_Studio__c</referenceTo>
        <relationshipLabel>Campaign Project Studio Element</relationshipLabel>
        <relationshipName>Campaign_Project_Studio_Element</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Element_Name__c</fullName>
        <label>Element Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Element_Product_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Element Product Type</label>
        <referenceTo>Element_Product_Type__c</referenceTo>
        <relationshipLabel>Campaign Project Studio Element</relationshipLabel>
        <relationshipName>Campaign_Project_Studio_Element</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Element_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Element Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Marketing_Studio_Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Project Studio Element</relationshipLabel>
        <relationshipName>Campaign_Project_Studio_Element</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Element_Details__c</fullName>
        <description>Non-Standard Element Details</description>
        <inlineHelpText>Non-Standard Element Details</inlineHelpText>
        <label>Non-Standard Element Details</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Element__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Standard Element</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign Project Studio Element</label>
    <nameField>
        <displayFormat>SE-{000000000}</displayFormat>
        <label>Campaign Project Studio Element Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Project Studio Element</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>